load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["judgectl.go"],
    importpath = "github.com/gearnode/judge/cmd/judgeserver",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "judgeserver",
    embed = [":go_default_library"],
    importpath = "github.com/gearnode/judge/cmd/judgeserver",
    visibility = ["//visibility:public"],
)
