load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/gearnode/judge/pkg/apiserver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apiserver/svc:go_default_library",
        "//pkg/orn:go_default_library",
        "//pkg/policy:go_default_library",
        "//pkg/storage/memory:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/credentials:go_default_library",
    ],
)
