load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["authorize.go"],
    importpath = "github.com/gearnode/judge/pkg/authorize",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/orn:go_default_library",
        "//pkg/policy:go_default_library",
        "//pkg/storage:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["authorize_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/orn:go_default_library",
        "//pkg/policy:go_default_library",
        "//pkg/storage/memory:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
