load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["policy.go"],
    importpath = "github.com/gearnode/judge/pkg/policy",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/orn:go_default_library",
        "//pkg/policy/resource:go_default_library",
        "//pkg/storage:go_default_library",
        "//vendor/github.com/gosimple/slug:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["policy_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/gearnode/judge/pkg/policy_test",
    deps = [
        "//pkg/orn:go_default_library",
        "//pkg/policy/resource:go_default_library",
        "//pkg/storage/memory:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
