load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["resource.go"],
    importpath = "github.com/gearnode/judge/pkg/policy/resource",
    visibility = ["//visibility:public"],
    deps = ["//pkg/orn:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["resource_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/orn:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
