load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["memory_store.go"],
    importpath = "github.com/gearnode/judge/pkg/storage/memory",
    visibility = ["//visibility:public"],
    deps = ["//pkg/storage:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["memory_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
